# plutofilter-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: test-build-publish.yml
examples/: load-image.rs
src/: error.rs  lib.rs  pixel.rs  surface.rs  utils.rs
tests/: blend-modes.rs  brightness_test.rs  color-transform.rs  composite-arithmetic.rs  composite.rs  contrast_test.rs  gaussian-blur.rs  grayscale_test.rs  hue_rotate_test.rs  invert_test.rs  opacity_test.rs  saturate_test.rs  sepia_test.rs
